- fix bug #40691: add comparison object handler